--- a/src/app/components/post-badge/post-badge.component.scss
+++ b/src/app/components/post-badge/post-badge.component.scss
@@ -54,7 +54,6 @@
 
     @include to-md {
       font-size: .7em;
-      line-height: 13px;
     }
 
     @include from-md {
