--- a/src/app/components/post-link/post-link.component.scss
+++ b/src/app/components/post-link/post-link.component.scss
@@ -27,7 +27,7 @@
     }
 
     @include to-md {
-      background: $fia-light-background-color;
+      background: $fia-dark-background-color;
       align-self: start;
       padding-left: 5px;
       padding-right: 5px;
@@ -131,6 +131,7 @@
         font-size: 0.95em;
         margin-bottom: 0;
         text-align: right;
+        line-height: 17px;
 
         @include to-xs {
           font-size: .85em;
@@ -140,6 +141,10 @@
 
         @include to-md {
           max-width: 80px;
+
+          .fia-post-link-description-bracket {
+            display: none;
+          }
         }
 
         @include from-sm {
@@ -153,7 +158,7 @@
         margin-top: 2px;
 
         @include to-xs {
-          font-size: .5em;
+          font-size: .6em;
         }
 
         @include to-sm {
